--- a/main.css
+++ b/main.css
@@ -46,7 +46,10 @@
 }
 
 * {
-    font-family: 'Inter', 'Hiragino Kaku Gothic ProN', 'Noto Sans CJK JP' !important;
+    font-family: 'Inter medium',
+        'LINE Seed JP_OTF',
+        'Hiragino Kaku Gothic ProN',
+        'Noto Sans CJK JP' !important;
     font-feature-settings: "palt" 1;
     letter-spacing: -0.018em;
     font-weight: 400;
