Update font-family and font-weight in CSS files

--- a/addressbar.css
+++ b/addressbar.css
@@ -25,6 +25,9 @@
 }
 
 /* URLフィールド */
+.UrlField * {
+    font-family: sans-serif !important;
+}
 .SearchField,
 .UrlBar-AddressField {
     border: unset !important;
